[package]
edition = "2021"
name = "rmb"
version = "0.1.0"

[[bin]]
name = "rmb-peer"
path = "src/bins/rmb-peer.rs"

[[bin]]
name = "rmb-relay"
path = "src/bins/rmb-relay.rs"


[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
base64 = "0.13.0"
bb8-redis = "0.11.0"
clap = {version = "3.1", features = ["derive"]}
futures = "0.3"
hex = {version = "0.4", features = ["alloc"]}
http = "0.2.7"
log = "0.4"
md5 = "0.7.0"
nix = "0.24.1"
parity-scale-codec = "3.1.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = {version = "1.0.81"}
simple_logger = "2.1"
sp-core = {version = "6.0.0", features = ["full_crypto"]}
sp-keyring = "6.0.0"
sp-runtime = "6.0.0"
thiserror = "1.0.31"
tokio = {version = "1", features = ["full"]}
tokio-retry = "0.3"
uuid = {version = "1.1.0", features = ["v4"]}
jsonrpsee-core = "0.14.0"
subxt = "0.22"
mime = "0.3"
mpart-async = "0.6.0"
url = "2.3.1"
tokio-tungstenite = "0.18.0"
futures-util = "0.3.25"
jwt = "0.16"

# for static build
openssl = {version = "0.10", features = ["vendored"]}
workers = { git = "https://github.com/threefoldtech/tokio-worker-pool", branch = "main"}
protobuf = { version = "3.2.0", features = ["with-bytes"]}

hyper = {version = "0.14", features = ["full"]}
hyper-tungstenite = "0.9.0"
lazy_static = "1.4.0"
prometheus = {version = "0.13.3", features=["process"]}

[build-dependencies]
git-version = "0.3.5"
protobuf-codegen = "3.2.0"
